--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "http": "0.0.1-security",
     "knex": "^0.95.15",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "net-tools": "^1.0.1",
+    "sequelize": "^6.16.1",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
